syntax = "proto3";
package raft;

service RaftNode {
  rpc RequestVote(VoteRequest) returns (VoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(InstallSnapshotChunk) returns (InstallSnapshotResponse);
  rpc AddServer(AddServerRequest) returns (AddServerResponse);
  rpc RemoveServer(RemoveServerRequest) returns (RemoveServerResponse);
  rpc ReadQuery(ReadQueryRequest) returns (ReadQueryResponse);
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes command = 3;
}

message VoteRequest {
  uint64 term = 1;
  uint64 last_log_index = 2;
  uint64 last_log_term = 3;
  string candidate_id = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit = 5;

  repeated LogEntry entries = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 cursor = 3;
}

message InstallSnapshotResponse {
  uint64 term = 1;
}

message InstallSnapshotChunk {
  uint64 term = 1;
  string leader_id = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term = 4;
  bytes data = 5;
  uint64 offset = 6;
  bool done = 7;
}

message AddServerRequest {
  string server_id = 1;
  string server_address = 2;
}

message AddServerResponse {
  bool success = 1;
  string leader_hint = 2;
}

message RemoveServerRequest {
  string server_id = 1;
}

message RemoveServerResponse {
  bool success = 1;
  string leader_hint = 2;
}

message ReadQueryRequest {
  bytes key = 1;
}

message ReadQueryResponse {
  bool success = 1;
  bytes value = 2;
  string leader_hint = 3;
}

